@@ -131,12 +131,25 @@ name|FunctionQParser
 extends|extends
 name|QParser
 block|{
+comment|/** @lucene.internal */
 DECL|field|sp
-specifier|protected
+specifier|public
 name|QueryParsing
 operator|.
 name|StrParser
 name|sp
+decl_stmt|;
+DECL|field|parseMultipleSources
+name|boolean
+name|parseMultipleSources
+init|=
+literal|true
+decl_stmt|;
+DECL|field|parseToEnd
+name|boolean
+name|parseToEnd
+init|=
+literal|true
 decl_stmt|;
 DECL|method|FunctionQParser
 specifier|public
@@ -167,6 +180,60 @@ name|req
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|setParseMultipleSources
+specifier|public
+name|void
+name|setParseMultipleSources
+parameter_list|(
+name|boolean
+name|parseMultipleSources
+parameter_list|)
+block|{
+name|this
+operator|.
+name|parseMultipleSources
+operator|=
+name|parseMultipleSources
+expr_stmt|;
+block|}
+comment|/** parse multiple comma separated value sources */
+DECL|method|getParseMultipleSources
+specifier|public
+name|boolean
+name|getParseMultipleSources
+parameter_list|()
+block|{
+return|return
+name|parseMultipleSources
+return|;
+block|}
+DECL|method|setParseToEnd
+specifier|public
+name|void
+name|setParseToEnd
+parameter_list|(
+name|boolean
+name|parseToEnd
+parameter_list|)
+block|{
+name|this
+operator|.
+name|parseMultipleSources
+operator|=
+name|parseMultipleSources
+expr_stmt|;
+block|}
+comment|/** throw exception if there is extra stuff at the end of the parsed valuesource(s). */
+DECL|method|getParseToEnd
+specifier|public
+name|boolean
+name|getParseToEnd
+parameter_list|()
+block|{
+return|return
+name|parseMultipleSources
+return|;
+block|}
 DECL|method|parse
 specifier|public
 name|Query
@@ -189,10 +256,165 @@ expr_stmt|;
 name|ValueSource
 name|vs
 init|=
-name|parseValueSource
-argument_list|()
+literal|null
 decl_stmt|;
-comment|/***  boost promoted to top-level query type to avoid this hack       // HACK - if this is a boosted query wrapped in a value-source, return     // that boosted query instead of a FunctionQuery     if (vs instanceof QueryValueSource) {       Query q = ((QueryValueSource)vs).getQuery();       if (q instanceof BoostedQuery) return q;     }     ***/
+name|List
+argument_list|<
+name|ValueSource
+argument_list|>
+name|lst
+init|=
+literal|null
+decl_stmt|;
+for|for
+control|(
+init|;
+condition|;
+control|)
+block|{
+name|ValueSource
+name|valsource
+init|=
+name|parseValueSource
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+name|sp
+operator|.
+name|eatws
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|parseMultipleSources
+condition|)
+block|{
+name|vs
+operator|=
+name|valsource
+expr_stmt|;
+break|break;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|lst
+operator|!=
+literal|null
+condition|)
+block|{
+name|lst
+operator|.
+name|add
+argument_list|(
+name|valsource
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|vs
+operator|=
+name|valsource
+expr_stmt|;
+block|}
+block|}
+comment|// check if there is a "," separator
+if|if
+condition|(
+name|sp
+operator|.
+name|peek
+argument_list|()
+operator|!=
+literal|','
+condition|)
+break|break;
+name|consumeArgumentDelimiter
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|lst
+operator|==
+literal|null
+condition|)
+block|{
+name|lst
+operator|=
+operator|new
+name|ArrayList
+argument_list|<
+name|ValueSource
+argument_list|>
+argument_list|(
+literal|2
+argument_list|)
+expr_stmt|;
+name|lst
+operator|.
+name|add
+argument_list|(
+name|valsource
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|parseToEnd
+operator|&&
+name|sp
+operator|.
+name|pos
+operator|<
+name|sp
+operator|.
+name|end
+condition|)
+block|{
+throw|throw
+operator|new
+name|ParseException
+argument_list|(
+literal|"Unexpected text after function: "
+operator|+
+name|sp
+operator|.
+name|val
+operator|.
+name|substring
+argument_list|(
+name|sp
+operator|.
+name|pos
+argument_list|,
+name|sp
+operator|.
+name|end
+argument_list|)
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|lst
+operator|!=
+literal|null
+condition|)
+block|{
+name|vs
+operator|=
+operator|new
+name|VectorValueSource
+argument_list|(
+name|lst
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 operator|new
 name|FunctionQuery
@@ -1094,6 +1316,26 @@ argument_list|,
 literal|"func"
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|subParser
+operator|instanceof
+name|FunctionQParser
+condition|)
+block|{
+operator|(
+operator|(
+name|FunctionQParser
+operator|)
+name|subParser
+operator|)
+operator|.
+name|setParseMultipleSources
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 name|Query
 name|subQuery
 init|=
