@@ -86,6 +86,21 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|internal
+operator|.
+name|runners
+operator|.
+name|statements
+operator|.
+name|Fail
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -2558,6 +2573,60 @@ argument_list|,
 literal|"//float[@name='score']='8.0'"
 argument_list|)
 expr_stmt|;
+comment|// test ability to parse multiple values
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"fl"
+argument_list|,
+literal|"*,score"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"{!func}dist(2,vector(1,1),$pt)"
+argument_list|,
+literal|"pt"
+argument_list|,
+literal|"3,1"
+argument_list|,
+literal|"fq"
+argument_list|,
+literal|"id:1"
+argument_list|)
+argument_list|,
+literal|"//float[@name='score']='2.0'"
+argument_list|)
+expr_stmt|;
+comment|// test that extra stuff after a function causes an error
+try|try
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"fl"
+argument_list|,
+literal|"*,score"
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"{!func}10 wow dude ignore_exception"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+comment|// OK
+block|}
 name|purgeFieldCache
 argument_list|(
 name|FieldCache
